# network-layer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Vagrantfile
.github/workflows/: cmake.yml
cmake/: Config.cmake.in
common/: CMakeLists.txt
common/include/: RPC.hh  config.hh.in
common/src/: fabrics_test.cc
commonAPI/: CMakeLists.txt
commonAPI/include/: RPC.hh
commonAPI/include/networklayer/: SharedMemory.hh
commonAPI/src/: fabricsGet.cc
docs/: CMakeLists.txt  Doxyfile.in  Mainpage.md
fabricBased/: CMakeLists.txt
fabricBased/benchmark/: benchmark_rma_client.cc  benchmark_rma_client_verbs.cc  benchmark_rma_server.cc  benchmark_rma_server_verbs.cc
fabricBased/example/: client.cc  connection.cc  connection_rma_client.cc  connection_rma_client_verbs.cc  connection_rma_server.cc  connection_rma_server_verbs.cc  connectionless_client.cc  connectionless_server.cc  rpc_client.cc  rpc_server.cc  server.cc
fabricBased/include/: connection.cc  connection.hh  connectionless.hh  domain.hh  fabricBased.hh
fabricBased/include/networklayer/: Macros.hh  connection.hh  connectionless.hh  fabricBased.hh  shared_buf.hh  unique_buf.hh
fabricBased/src/: client.cc
fabricBased/test/: broadcastLibrary.cc  connectionTest.cc  connectionlessTest.cc  fabricLibrary.cc  fabricTest.cc
fabricBasedCUDA/: CMakeLists.txt  README.txt
fabricBasedCUDA/example/: connection_rma_client.cu  connection_rma_server.cu
fabricBasedCUDA/include/networklayer/cuda/: Macros.cuh  connection.cuh  gpu_buf.cuh
scripts/: common.sh
scripts/setup/: cloudlab.sh
socketBased/: CMakeLists.txt
socketBased/include/: socketBased.hh
socketBased/test/: socketBasedTest.cc
